// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`блок статистики должен отрисовать блок статистики без позиции в поиске, если ее нет 1`] = `
<div
  className="CardOwnerControlsMobile__stat"
>
  <div
    className="CardOwnerControlsMobile__statItem"
  >
    <div
      className="CardOwnerControlsMobile__statItemTitle"
    >
      Просмотры
    </div>
    <div
      className="CardOwnerControlsMobile__statItemCount"
    >
      11
    </div>
    <div
      className="CardOwnerControlsMobile__statItemTotal"
    >
      91
       всего
    </div>
  </div>
  <div
    className="CardOwnerControlsMobile__statItem"
  >
    <div
      className="CardOwnerControlsMobile__statItemTitle"
    >
      Звонки
    </div>
    <div
      className="CardOwnerControlsMobile__statItemCount"
    >
      3
    </div>
    <div
      className="CardOwnerControlsMobile__statItemTotal"
    >
      <Link
        onClick={[Function]}
      >
        12
         всего
      </Link>
      <OfferCallHistoryModal
        offer="[Offer mock]"
        onRequestHide={[Function]}
        visible={false}
      />
    </div>
  </div>
</div>
`;

exports[`если для оффера действует скидка на продление размещения залогирует показ васа при маунте 1`] = `
Array [
  Object {
    "category": "cars",
    "event": "VAS_SHOW",
    "from": "api_m_card_prolong",
    "offerId": "1085562758-1970f439",
    "originalPrice": undefined,
    "price": 2199,
    "serviceId": "all_sale_activate",
  },
]
`;

exports[`если для оффера действует скидка на продление размещения при клике на кнопку активировать вызовет модал оплаты 1`] = `
Array [
  Object {
    "category": "cars",
    "from": "api_m_card_prolong",
    "offerId": "1085562758-1970f439",
    "platform": "PLATFORM_MOBILE",
    "services": Array [
      Object {
        "service": "all_sale_activate",
      },
    ],
    "shouldShowSuccessTextAfter": true,
    "successText": "Платёж прошёл",
  },
]
`;

exports[`если для оффера действует скидка на продление размещения при клике на кнопку активировать залогирует клик 1`] = `
Array [
  Object {
    "category": "cars",
    "event": "VAS_CLICK",
    "from": "api_m_card_prolong",
    "offerId": "1085562758-1970f439",
    "originalPrice": undefined,
    "price": 2199,
    "serviceId": "all_sale_activate",
  },
]
`;

exports[`кнопки действий должен отрисовать кнопку "написать в поддержку", если оффер забанен 1`] = `
<div
  className="CardOwnerControlsMobile__buttonGroup"
>
  <Button
    className="CardOwnerControlsMobile__button"
    color="transparentBlue"
    onClick={[Function]}
    size="l"
    type="link"
    url="//auto.ru/?chat"
    width="full"
  >
    Написать в поддержку
  </Button>
</div>
`;

exports[`кнопки действий должен отрисовать правильный набор кнопок для редактирования и активации для частника 1`] = `
Array [
  <div
    className="CardOwnerControlsMobile__buttonGroup"
  >
    <Button
      className="CardOwnerControlsMobile__button"
      color="green"
      onClick={[Function]}
      size="l"
      type="button"
      width="full"
    >
      Активировать
    </Button>
  </div>,
  <div
    className="CardOwnerControlsMobile__buttonGroup"
  >
    <Button
      className="CardOwnerControlsMobile__button"
      color="transparentBlue"
      size="l"
      type="link"
      url="link/fromWebToApp/?action=edit"
      width="full"
    >
      Редактировать
    </Button>
    <Button
      className="CardOwnerControlsMobile__button"
      color="transparentBlue"
      onClick={[Function]}
      size="l"
      type="button"
      width="full"
    >
      Удалить
    </Button>
  </div>,
]
`;

exports[`кнопки действий должен отрисовать правильный набор кнопок для редактирования и снятия с продажи 1`] = `
<div
  className="CardOwnerControlsMobile__buttonGroup"
>
  <Button
    className="CardOwnerControlsMobile__button"
    color="transparentBlue"
    size="l"
    type="link"
    url="link/fromWebToApp/?action=edit"
    width="full"
  >
    Редактировать
  </Button>
  <Button
    className="CardOwnerControlsMobile__button"
    color="transparentBlue"
    onClick={[Function]}
    size="l"
    type="button"
    width="full"
  >
    Снять с продажи
  </Button>
</div>
`;

exports[`кнопки действий должен отрисовать только активацию для дилера 1`] = `
Array [
  <div
    className="CardOwnerControlsMobile__buttonGroup"
  >
    <Button
      className="CardOwnerControlsMobile__button"
      color="green"
      onClick={[Function]}
      size="l"
      type="button"
      width="full"
    >
      Активировать
    </Button>
  </div>,
  <div
    className="CardOwnerControlsMobile__buttonGroup"
  />,
]
`;
